--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="conatiner-div">
 
                 <!-- description -->
-                <div>
+                <div class="paragraph">
                     <h1>Customize your 24-inch iMac with Apple M1 chip.</h1>
                     <p>Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores, 7-core GPU, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt/USB 4 ports Magic Mouse Keyboard US English</p>
                 </div>
@@ -77,8 +77,10 @@
                 <!-- Promo-Code Button  -->
                 <div class="promo-code">
                     <p id="promo-code-text">Add Promo code</p>
-                    <input type="number" id="promo-Input" placeholder="type '123456'">
-                    <button id="promo-btn">Apply</button>
+                    <div class="promo-item">
+                        <input type="number" id="promo-Input" placeholder="type '123456'">
+                        <button id="promo-btn">Apply</button>
+                    </div>
                 </div>
             </div>
         </section>
