--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <!-- description -->
                 <div class="paragraph">
-                    <h1>Customize your 24-inch iMac with Apple M1 chip.</h1>
+                    <h1>Customize your 24-inch iMac with Apple M1 chip</h1>
                     <p>Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores, 7-core GPU, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two Thunderbolt/USB 4 ports Magic Mouse Keyboard US English</p>
                 </div>
 
